added burndown chart

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -340,30 +340,30 @@ Metrics and graphs showing the performance of certain parts of the project.
 \centering
 \subfigure[Figure 1] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \subfigure[Figure 2] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \subfigure[Figure 3] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \caption{A figure with two subfigures}
 \label{fig:test}
 
 \subfigure[Figure 4] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \subfigure[Figure 5] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \subfigure[Figure 6] {
   \label{fig:sub1}
-  \includegraphics[width=.3\linewidth]{test640}
+  \includegraphics[width=.3\linewidth]{burndown-chart}
 }
 \caption{A figure with two subfigures}
 \label{fig:test}
