--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -259,13 +259,20 @@ The initial implementation plan for this part of the architecture was to have th
 A concern about this structure was raised by our academic stakeholders where they wanted the SSE team to further decouple their work from the CS students. This was done by having one of the data collection application implemented by the SSE team, thereby making the SSE team responsible for a full slice through the system. Any additional data collection by the CS students would therefore be additive and not essential to the success of the project.
 
 \subsection{Aggregation}  % TODO: find a good name for this
-The API mentioned in Section~\ref{dataCollection} was the only contact point for the data collection applications. The component needed to be designed and implemented to handle large quantities of incoming readings, from many different sources, and efficiently buffer and pass them to the processing component. The aggregation component would group together readings and post them to the processing component in a producer/consumer pattern. To manage this the SSE team evaluated several message broker systems for the job, Apache Kafka, Azure EventHub and RabbitMQ. The criteria used was threefold, one was the applicability of the technology to the producer/consumer pattern, their cost and their ease of integration with the technology used in the processing component. Azure EventHub was considered as a robust and scalable possibility but was discarded because of the cost associated with running it for the duration of the project, see Appendix~\ref{ArchitectureCost}. RabbitMQ and Apache Kafka both fit well with the architecture and patterns the team had in mind but ultimately Apache Kafka was chosen because of it's ease of integration with Apache Spark. 
+The API mentioned in Section~\ref{dataCollection} was the only contact point for the data collection applications. The component needed to be designed and implemented to handle large quantities of incoming readings, from many different sources, and efficiently buffer and pass them to the processing component. The aggregation component would group together readings and post them to the processing component in a producer/consumer pattern. To manage this the SSE team evaluated several message broker systems for the job, Apache Kafka, Azure EventHub and RabbitMQ. The criteria used was threefold, one was the applicability of the technology to the producer/consumer pattern, their cost and their ease of integration with the technology used in the processing component. Azure EventHub was considered as a robust and scalable possibility but was discarded because of the cost associated with running it for the duration of the project, see Appendix~\ref{ArchitectureCost}. RabbitMQ and Apache Kafka both fit well with the architecture and patterns the team had in mind but ultimately Apache Kafka was chosen because of it's ease of integration with Apache Spark.
 
 \subsection{Processing}
-Upon aggregation, data will be processed/transformed before it is stored inside Cassandra. We agreed on using a \textcolor{red}{Kalman filter} or using a \textcolor{red}{moving average} in Spark to produce a confident measurement we can store in Cassandra. \textcolor{blue}{Vesko you can elaborate just a bit}
+With Apacha Kafka working as a producer for the producer/consumer pattern and Apache Spark working as the consumer the team managed to handle the level of throughput needed for the purposes of the project.
+Spark consumes streams of sensor readings coming from Kafka. Kafka has already indexed, filtered and sorted the sensor readings into topics. Spark  then took over and pushes the sensors reading streams through several mappings, calculations and reductions to form a processing pipeline that results in the identification of an obstacle.
+
+\subsection{Storage and API}
+The obstacles identified by the Spark stream processing are finally persisted in a database for further processing and use by the feedback applications. The database used for persistence needed to fulfil several requirements to fit the project, scalability with increased load, flexibility of schema and cost.
+The scalability can be solved by most distributed databases but the flexibility of schema and cost are more difficult to work around.
+The first step in the choice of database technology was to decide on a SQL or NoSQL database, where NoSQL provided the flexibility needed. After NoSQL was selected the next question was whether to go for a document storage or column storage database. Both provide a flexible schema data persistence but the data modelling needed for each is quite a bit different. After these deliberations there were 3 possibilities explored, Apache Cassandra, Azure DocumentDB and MongoDB.  Here again the cost of running an Azure product is prohibitive to an academic prototype project, in addition to that the documentation and troubleshooting resources of the open source technologies is far better than the ones available for Azure. Apache Cassandra and MongoDB both seemed to fit well with the needs of the architecture, both are easily integrated with Spark and both have more than adequate documentation. The deciding factor in choosing between the two was the fact that Cassandra is an Apache distributed system that inherently works with Zookeeper in the same way that Spark and Kafka do. This meant that the time and effort in setup and maintenance would be lessened since all these technologies run in the same managed distributed environment.
 
 \subsection{Feedback}
-\textcolor{blue}{Shuang???}
+The obstacles detected are exposed through an API that queries Cassandra and serves the data to the feedback application.
+The feedback application uses the locations of the obstacles to notify the user if they are in danger of colliding with them.
 
 % TODO: make a good argument for how we managed RISK
 
@@ -275,8 +282,12 @@ As described in section~\ref{architecture} the chosen architecture uses a variet
 \subsection{Technology}
 
 \subsubsection{Kafka}
+A communication handler is set up to listen on a UDP socket for sensor readings. The readings are sent to the socket from the data collection applications in JSON format which the handler receives and deserialises before pushing them into the Kafka message queue.
+
 %Describe
 \subsubsection{Spark}
+After aggregation, data will be processed/transformed before it is stored inside Cassandra. We agreed on using a \textcolor{red}{Kalman filter} or using a \textcolor{red}{moving average} in Spark to produce a confident measurement we can store in Cassandra. \textcolor{blue}{Vesko you can elaborate just a bit}
+
 %Describe
 \subsubsection{Cassandra}
 %Describe
@@ -335,6 +346,17 @@ Show how our integration and load testing evaluates our architecture and a discu
 
 \section{Evaluation}
 Metrics and graphs showing the performance of certain parts of the project.
+
+\subsection{Performance and Scalability}
+Discussion of the amount of messages that can be processed in Kafka -> Spark -> Cassandra.
+Talking about aggregation and such.
+Packet drop, burst of messages vs sustained.
+
+\subsection{Detection accuracy}
+What is it that we are measuring
+How do we evaluate the accuracy
+Noise cancelling?
+
 
 \begin{figure}
 \centering
