--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -306,7 +306,7 @@ Upon processing by spark, a single obstacle location is stored in Cassandra with
 
 \subsubsection{Why Kafka?}
 
-\subsubsection{Why Spark For Processing instead of Kafka Consumer, Apache Storm, Hadoop?}
+\subsubsection{Why Spark For Processing instead of Kafka processing, Apache Storm, Hadoop?}
 
 \subsubsection{Why UDP?}
 
